--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-site: Personal Jekyll Theme
+site: Julia Tsaltas | Data Scientist
 
-url: 
+url: https://juliatsaltas.github.io/personal-website/ 
 baseurl: 
 
 collections:
