--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 basic_settings:
-  site_title: Personal
+  site_title: Julia Tsaltas | Data Scientist
   favicon_image: /images/favicon.png
 
 header_settings:
@@ -10,15 +10,12 @@ menu_settings:
   menu_items:
     - title: 'Projects'
       url: '/'
-    - title: 'Blog'
-      url: '/blog/'
     - title: 'About'
       url: '/about'
-    - title: 'Contact'
-      url: '/contact'
+
 
 footer_settings:
-  footer_tagline: A sleek, modern Jekyll theme for personal websites.
+  footer_tagline: 
 
 hero_settings:
   overlay_opacity: 0.8
@@ -50,7 +47,7 @@ social_settings:
   dribbble_url: ''
   behance_url: ''
   deviantart_url: ''
-  github_url: ''
+  github_url: 'https://github.com/juliatsaltas/'
   reddit_url: ''
   flickr_url: ''
   etsy_url: ''
@@ -58,7 +55,7 @@ social_settings:
   soundcloud_url: ''
   spotify_url: ''
   bandcamp_url: ''
-  linkedin_url: ''
+  linkedin_url: 'https://www.linkedin.com/in/jtsaltas/'
 
 color_settings:
   background_color: '#ffffff'
